--- a/CharacterManager.WebMVC/Views/Home/Index.cshtml
+++ b/CharacterManager.WebMVC/Views/Home/Index.cshtml
@@ -1,20 +1,28 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-    
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
             <h2 id="features">Features</h2>
         </div>
     </div>
-    <div class="row">
+    <div class="row feature">
         <div class="col-md-4">
             <h2>Character Sheets</h2>
             <p>
-                Keep track of all your characters with information such as name, race, gender, and class. 
+                Keep track of all your characters with information such as name, race, gender, and class.
                 More character details coming soon...
             </p>
+        </div>
+        <div class="col-md-8">
+            <img src="~/Content/Images/charSheet.PNG" alt="Character sheet" class="img-responsive" />
+        </div>
+    </div>
+    <div class="row feature">
+        <div class="col-md-8">
+            <img src="~/Content/Images/journal.PNG" alt="Journal page" class="img-responsive" />
         </div>
         <div class="col-md-4">
             <h2 class="test">Character Journals</h2>
@@ -22,12 +30,17 @@
                 Detail all your characters adventures with character specific journal entries.
             </p>
         </div>
+    </div>
+    <div class="row feature">
         <div class="col-md-4">
             <h2>Character Inventory</h2>
             <p>
-                Know exactly what each character is carrying in their inventory, 
+                Know exactly what each character is carrying in their inventory,
                 and how much of each item they are carrying. More inventory item details coming soon...
             </p>
+        </div>
+        <div class="col-md-8">
+            <img src="~/Content/Images/inventory.PNG" alt="Inventory page" class="img-responsive" />
         </div>
     </div>
 </div>
