--- a/CharacterManager.WebMVC/Content/Site.css
+++ b/CharacterManager.WebMVC/Content/Site.css
@@ -59,6 +59,14 @@ textarea {
     font-size: 1.1em;
 }
 
+#features {
+    padding-bottom: 7%;
+}
+
+.feature {
+    margin-bottom: 10%;
+}
+
 .char-info {
     font-size: 0.9em;
 }
@@ -111,7 +119,7 @@ textarea {
 
 .character-card {
     max-height: 450px;
-    padding: 0 3% 3% 3%;
+    padding: 0 3% 5% 3%;
 }
 
 .character-card a {
