--- a/CharacterManager.WebMVC/Views/Character/Edit.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Edit.cshtml
@@ -24,6 +24,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.Level, "Level*", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.CharacterName, "Name*", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.CharacterName, new { htmlAttributes = new { @class = "form-control" } })
