--- a/CharacterManager.WebMVC/Views/Character/Index.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Index.cshtml
@@ -48,7 +48,7 @@
                             <img src=@Url.Content(classIcon) alt="Class icon" class="img-responsive class-icon" />
                         </div>
                         <div class="col-md-3 col-xs-4">
-                            <h2>2</h2>
+                            <h2>@Html.DisplayFor(modelItem => item.Level)</h2>
                             <h4>Level</h4>
                             <h4>@Html.DisplayFor(modelItem => item.CharacterGender)</h4>
                             <h4>@Html.DisplayFor(modelItem => race)</h4>
