--- a/CharacterManager.WebMVC/Views/Home/About.cshtml
+++ b/CharacterManager.WebMVC/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div class="row about">
+    <div class="col-md-offset-2 col-md-8">
+        <h2>@ViewBag.Title.</h2>
+        <h3>@ViewBag.Message</h3>
 
-<p>Use this app to keep track of your characters information, as well as their individual journals, and inventories.</p>
+        <p>Use this app to keep track of your characters information, as well as their individual journals, and inventories.</p>
+    </div>
+</div>
