--- a/CharacterManager.WebMVC/Views/Character/Details.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Details.cshtml
@@ -313,8 +313,8 @@
                             @Html.DisplayNameFor(model => model.Persuasion) <small>(Cha)</small>
                         </li>
                         <li class="list-group-item">
-                            <span class="badge">@Html.DisplayFor(model => model.Regligion)</span>
-                            @Html.DisplayNameFor(model => model.Regligion) <small>(Int)</small>
+                            <span class="badge">@Html.DisplayFor(model => model.Religion)</span>
+                            @Html.DisplayNameFor(model => model.Religion) <small>(Int)</small>
                         </li>
                         <li class="list-group-item">
                             <span class="badge">@Html.DisplayFor(model => model.SleightOfHand)</span>
